--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <a class="nav-link" href="#projects"><span>Projects</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#blog"><span>Articles</span></a>
+                    <a class="nav-link" href="#blog"><span>Blog</span></a>
                   </li>                
                   <li class="nav-item">
                     <a class="nav-link" href="#contact"><span>Contact</span></a>
@@ -426,7 +426,7 @@
                 <h2 class="welcome-text text-center my-4">My Thoughts</h2>
                 <h1 class="main-title text-center mb-5">Articles I Wrote</h1>
                 <div class="row blog-posts g-4 mx-auto">
-                    <!-- Blog Post 1 -->
+                    <!-- Article 1 -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="blog-card mx-auto">
                             <img src="./images/articles/graduation" class="blog-img" alt="Looking Back So I Can Move Forward">
@@ -443,7 +443,7 @@
                         </div>
                     </div>
 
-                    <!-- Blog Post 2 -->
+                    <!-- Article 2 -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="blog-card mx-auto">
                             <img src="./images/articles/web" class="blog-img" alt="My Journey Into Web Development">
@@ -460,7 +460,7 @@
                         </div>
                     </div>
 
-                    <!-- Blog Post 3 -->
+                    <!-- Article 3 -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="blog-card mx-auto">
                             <img src="./images/articles/redgreen" class="blog-img" alt="UniTeam-porary">
