--- a/article1.html
+++ b/article1.html
@@ -208,12 +208,13 @@
 
                         <p>But those were the moments that taught me the most.</p>
 
-                        <p>Graduation isn’t just a celebration of getting things right; it’s a celebration of surviving what went wrong. It’s standing on the stage knowing how many times I stumbled before I learned to stand tall. And I did. Every failure became a part of my story, not the ending, but a necessary chapter.</p>
+                        <p>Graduation isn’t just a celebration of getting things right; it’s a celebration of surviving what went wrong. It’s standing on the stage knowing how many times I stumbled before, I learned to stand tall. And I did. Every failure became a part of my story, not the ending, but a necessary chapter.</p>
 
-                        <p>I’ve learned that failure doesn’t define you—it refines you. It teaches patience, humility, and strength. It forced me to listen, to grow, to ask for help, and to keep showing up even when it was hard. So today, I celebrate not just the person I’ve become, but the path that got me here—the messy, imperfect, powerful journey. Because success isn’t a straight line. It bends, it breaks, it circles back. <i>And no matter how winding the road may be, I will always choose to walk it—bruised, brave, and becoming.</i></p>
+                        <p>I’ve learned that failure doesn’t define you—<i>it refines you</i>. It teaches patience, humility, and strength. It forced me to listen, to grow, to ask for help, and to keep showing up even when it was hard. So today, I celebrate not just the person I’ve become, but the path that got me here—the messy, imperfect, powerful journey. Because success isn’t a straight line. It bends, it breaks, it circles back. And no matter how winding the road may be, I will always choose to walk it—<i>bruised, brave, and becoming.</i></p>
                     </div>
                 </div>
-                <!-- Back Button (Only at the bottom) -->
+                
+                <!-- Back Button (to blog section) -->
                 <a href="index.html#blog" class="back-button">← Back to Blog</a>
             </div>
         </section>
