--- a/article2.html
+++ b/article2.html
@@ -196,24 +196,25 @@
                     <div class="article-content">
                         <p>It all began during the quiet, uncertain days of the pandemic. While the world was grappling with lockdowns and fear, I was introduced to something that would quietly change the course of my life—<strong>HTML</strong>.</p>
 
-                        <p>I was in Grade 10, attending online classes from my bedroom. The air was heavy with the silence of isolation, and like many students, I was just trying to stay afloat. But in the middle of those challenging days, our ICT teacher introduced us to web development.</p>
+                        <p>I was in Grade 10, attending online classes from my bedroom. The air was heavy with the silence of isolation, and like many students, I was just trying to stay afloat. But in the middle of those challenging days, our Computer teacher introduced us to web development.</p>
 
-                        <p>At first, it felt like just another requirement to complete—just another file to submit. But as I started typing those simple lines of code—<samp>html</samp>, <samp>head</samp>, <samp>body</samp>—I felt something unexpected. A <i>spark</i>. I was creating my first ever web page.</p>
+                        <p>At first, it felt like just another requirement to complete—just another file to submit. But as I started typing those simple lines of code—<samp>html</samp>, <samp>head</samp>, <samp>body</samp>—I felt something unexpected. A <i>spark</i>. I was creating my first-ever web page.</p>
 
                         <p>It was nothing grand. Just a white page with a title, a short paragraph, maybe a background color I thought was cool. But seeing something I made show up on my screen? That felt amazing. Empowering, even. I wish I could show it to you now—but unfortunately, I’ve lost the file somewhere between devices and forgotten folders. Still, the memory of that moment remains vivid in my heart. </p>
 
-                        <p>That little web page was the beginning of something bigger.</p>
+                        <p><strong>That little web page was the beginning of something bigger.</strong></p>
 
                         <p>I didn’t realize it at the time, but that simple assignment lit a fire in me. And when it came time to choose a path after high school, I found myself taking a leap—I enrolled in <strong>BSIT</strong>. It wasn’t just about computers or websites anymore. It was about following the feeling I first felt in Grade 10. That quiet sense of purpose.</p>
 
-                        <p>Since then, the journey hasn’t always been easy. I've struggled with logic errors, confusing syntax, and moments of self-doubt. There were times I questioned if I was good enough, smart enough, <i>meant</i> for this. But each time I opened my code editor, that same feeling came back—the thrill of creating something from nothing.</p>
+                        <p>Since then, the journey hasn’t always been easy. I've struggled with logic errors, confusing syntax, and moments of self-doubt. There were times I questioned if I was good enough, smart enough, <i>meant</i> for this. But each time I open my code editor, that same feeling comes back—the thrill of creating something from nothing.</p>
 
                         <p>Now, when I build a project, I remember the student I was during the pandemic: isolated, uncertain, but quietly discovering something beautiful. I’m no longer just writing code—I’m writing my story. And though I may have started in the middle of a global crisis, I believe that’s what made this journey even more meaningful.</p>
 
                         <p><i>Because from the darkest times, the brightest passions can be born.</i></p>
                     </div>
                 </div>
-                <!-- Back Button (Only at the bottom) -->
+
+                <!-- Back Button (to blog section) -->
                 <a href="index.html#blog" class="back-button">← Back to Blog</a>
             </div>
         </section>
