--- a/article3.html
+++ b/article3.html
@@ -215,7 +215,8 @@
                         </p>
                     </div>
                 </div>
-                <!-- Back Button (Only at the bottom) -->
+                
+                <!-- Back Button (to blog section) -->
                 <a href="index.html#blog" class="back-button">← Back to Blog</a>
             </div>
         </section>
