--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
+
+        <!-- CSS File -->
         <link rel="stylesheet" href="styles.css" />
 
         <!-- Bootstrap CSS v5.2.1 -->
@@ -45,15 +47,7 @@
               </a>
 
               <!-- Toggler button -->
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"aria-label="Toggle navigation">
                 <span class="custom-toggler">
                   <span class="toggler-line top-line"></span>
                   <span class="toggler-line middle-line"></span>
@@ -99,7 +93,7 @@
                             <h4 class="welcome-text">Welcome to my digital space! I am</h4>
                             <h1 class="main-title">Pia Eunice Joi</h1>
                             <div class="static-text">
-                                <p class="text-white">A 2nd year BSIT student with a growing passion for technology, web development, and creating digital solutions. Continuously learning and exploring the evolving world of IT, with a goal of building innovative projects that make an impact.</p>
+                                <p class="text-white">A second-year BSIT student with a growing passion for technology, web development, and creating digital solutions. Continuously learning and exploring the evolving world of IT, with a goal of building innovative projects that make an impact.</p>
                             </div>
                             <div class="social-icons my-4">
                                 <a href="https://www.facebook.com/piaeunicejoi" class="social-link"><i class="bi bi-facebook"></i></a>
@@ -117,7 +111,7 @@
                     <div class="col-12 col-sm-12 col-md-5 col-lg-5 text-center order-1 order-md-2">
                         <div class="image-content p-3">
                             <div class="circle-frame mx-auto rounded-circle">
-                                <img src="./images/pia.jpg" class="profile-img rounded-circle" alt="Profile Image">
+                                <img src="./images/pia.jpg" class="profile-img rounded-circle" alt="Profile Picture">
                             </div>
                         </div>
                     </div>
@@ -128,10 +122,10 @@
         <div class="section-line"></div>
 
         <!-- ABOUT -->
-        <section class="about reveal-on-scroll" id="about">
+        <section class="about" id="about">
             <div class="container position-relative z-1">
                 <div class="row align-items-center">
-                    <!-- Image Content -->
+                    <!-- Image (Left) -->
                     <div class="col-12 col-sm-12 col-md-5 col-lg-4 text-center order-1 order-md-1">
                         <div class="image-content p-3">
                             <div class="circle-frame mx-auto rounded-circle">
@@ -139,7 +133,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Text Content -->
+                    <!-- Text Content (Right) -->
                     <div class="col-12 col-sm-12 col-md-7 col-lg-8 text-center text-md-start order-2 order-md-2">
                         <div class="text-content p-3">
                             <h2 class="welcome-text my-4">About Me</h2>
@@ -164,7 +158,7 @@
                                                 </div>
                                                 <div class="card-description">
                                                     <p class="educ-description">
-                                                        BS in Information Technology (ongoing).
+                                                        BS in Information Technology.
                                                     </p>
                                                 </div>
                                             </div>
@@ -267,8 +261,8 @@
                         <div class="skill mb-4 text-center">
                             <span>Java</span>
                             <div class="bar">
-                                <div style="width: 90%;">
-                                    <span>90%</span>
+                                <div style="width:85%;">
+                                    <span>85%</span>
                                 </div>
                             </div>
                         </div>
@@ -421,12 +415,12 @@
         <div class="section-line"></div>
 
         <!-- BLOG -->
-        <section id="blog" class="blog reveal-on-scroll">
+        <section id="blog" class="blog">
             <div class="container position-relative z-1">
                 <h2 class="welcome-text text-center my-4">My Thoughts</h2>
                 <h1 class="main-title text-center mb-5">Articles I Wrote</h1>
                 <div class="row blog-posts g-4 mx-auto">
-                    <!-- Article 1 -->
+                    <!-- Article 1 (Looking Back So I Can Move Forward) -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="blog-card mx-auto">
                             <img src="./images/articles/graduation" class="blog-img" alt="Looking Back So I Can Move Forward">
@@ -443,7 +437,7 @@
                         </div>
                     </div>
 
-                    <!-- Article 2 -->
+                    <!-- Article 2 (My Journey Into Web Development) -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="blog-card mx-auto">
                             <img src="./images/articles/web" class="blog-img" alt="My Journey Into Web Development">
@@ -460,10 +454,10 @@
                         </div>
                     </div>
 
-                    <!-- Article 3 -->
+                    <!-- Article 3 (UniTeam-porary Stability) -->
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="blog-card mx-auto">
-                            <img src="./images/articles/redgreen" class="blog-img" alt="UniTeam-porary">
+                            <img src="./images/articles/redgreen" class="blog-img" alt="UniTeam-porary Stability">
                             <div class="blog-content p-3">
                                 <div class="blog-meta">
                                     <span class="blog-date">December 13, 2024</span>
@@ -485,7 +479,6 @@
         <!-- CONTACT -->
         <section class="contact" id="contact">
           <div class="container position-relative z-1">
-              <!-- Section Title -->
               <h2 class="welcome-text text-center my-4">Let’s Connect</h2>
               <h1 class="main-title text-center mb-5">Contact Me</h1>
 
@@ -565,7 +558,8 @@
         <!-- SweetAlert2 Script -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-        <!-- Your Custom Script -->
+        <!-- JavaScript File -->
         <script src="script.js"></script>
+        
     </body>
 </html>
