--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Image (Right) -->
+                    <!-- Image Content (Right) -->
                     <div class="col-12 col-sm-12 col-md-5 col-lg-5 text-center order-1 order-md-2">
                         <div class="image-content p-3">
                             <div class="circle-frame mx-auto rounded-circle">
@@ -125,7 +125,7 @@
         <section class="about" id="about">
             <div class="container position-relative z-1">
                 <div class="row align-items-center">
-                    <!-- Image (Left) -->
+                    <!-- Image Content (Left) -->
                     <div class="col-12 col-sm-12 col-md-5 col-lg-4 text-center order-1 order-md-1">
                         <div class="image-content p-3">
                             <div class="circle-frame mx-auto rounded-circle">
