--- a/index.html
+++ b/index.html
@@ -513,26 +513,28 @@
 
                   <!-- Contact Form (Right) -->
                   <div class="col-12 col-lg-8">
-                      <div class="form-panel p-4">
-                          <form id="contact" class="contact-form needs-validation d-flex flex-column gap-3">
-                              <div class="row g-3">
-                                  <div class="col-12 col-md-6 form-group">
-                                      <span class="form-label">Name</span>
-                                      <input type="text" class="form-control" id="name" required>
-                                  </div>
-                                  <div class="col-12 col-md-6 form-group">
-                                      <span class="form-label">Email</span>
-                                      <input type="email" class="form-control" id="email" required>
-                                  </div>
-                              </div>
-                              <div class="form-group">
-                                  <span class="form-label">Message</span>
-                                  <textarea class="form-control" id="message" rows="6" required></textarea>
-                              </div>
-                              <button type="submit" class="btn-send">Send Message</button>
-                          </form>
-                      </div>
-                  </div>
+                    <div class="form-panel p-4">
+                        <form id="contact" class="contact-form needs-validation d-flex flex-column gap-3">
+                            <div class="row g-3">
+                                <div class="col-12 col-md-6 form-group">
+                                    <span class="form-label">Name</span>
+                                    <input type="text" class="form-control" id="name" required>
+                                </div>
+                                <div class="col-12 col-md-6 form-group">
+                                    <span class="form-label">Email</span>
+                                    <input type="email" class="form-control" id="email" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="form-label">Message</span>
+                                <textarea class="form-control" id="message" rows="6" required></textarea>
+                            </div>
+                            <div class="btn-container">
+                                <button type="submit" class="btn-send">Send Message</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
               </div>
           </div>
         </section>
