--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                           <div class="project-content p-3">
                               <h3 class="project-title">NUFinds</h3>
                               <p class="project-description">
-                                  A record-keeping mobile app designed to help users report and document lost items at NU Lipa.
+                                A record-keeping mobile app designed to help users at NU Lipa report, document, and track lost and found items, making the recovery process more organized and efficient.
                               </p>
                           </div>
                       </div>
@@ -390,7 +390,7 @@
                           <div class="project-content p-3">
                               <h3 class="project-title">Personal Website</h3>
                               <p class="project-description">
-                                  A personal hub to highlight what I do, what I am learning, and the things I am passionate about.
+                                A personal hub to showcase my projects, document what I am learning, share my interests, and reflect my growth, goals, and passions as a developer and creative individual.
                               </p>
                           </div>
                       </div>
@@ -403,7 +403,7 @@
                           <div class="project-content p-3">
                               <h3 class="project-title">Health First</h3>
                               <p class="project-description">
-                                  A mobile app designed to address some health challenges by offering features aimed at promoting a healthy lifestyle.
+                                  A wellness-focused mobile app that promotes healthy habits through features like Body Mass Index (BMI) calculator, step tracking, and daily health tips.
                               </p>
                           </div>
                       </div>
