--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                           <div class="project-content p-3">
                               <h3 class="project-title">Health First</h3>
                               <p class="project-description">
-                                  A wellness-focused mobile app that promotes healthy habits through features like Body Mass Index (BMI) calculator, step tracking, and daily health tips.
+                                  A wellness-focused mobile app that promotes healthy habits through features like Body Mass Index (BMI) calculator, step tracking, and health tips.
                               </p>
                           </div>
                       </div>
