--- a/index.html
+++ b/index.html
@@ -478,65 +478,65 @@
           
         <!-- CONTACT -->
         <section class="contact" id="contact">
-          <div class="container position-relative z-1">
-              <h2 class="welcome-text text-center my-4">Let’s Connect</h2>
-              <h1 class="main-title text-center mb-5">Contact Me</h1>
+            <div class="container position-relative z-1">
+                <h2 class="welcome-text text-center my-4">Let’s Connect</h2>
+                <h1 class="main-title text-center mb-5">Contact Me</h1>
 
-              <!-- Two-Column Layout -->
-              <div class="row contact-wrapper g-4">
-                  <!-- Contact Info (Left) -->
-                  <div class="col-12 col-lg-4">
-                      <div class="contact-info d-flex flex-column gap-3">
-                          <div class="info-card p-3">
-                              <i class="bi bi-telephone-fill"></i>
-                              <div class="info-content">
-                                  <strong>Phone</strong>
-                                  <p>+63 936 504 4595</p>
-                              </div>
-                          </div>
-                          <div class="info-card p-3">
-                              <i class="bi bi-envelope-fill"></i>
-                              <div class="info-content">
-                                  <strong>Mail</strong>
-                                  <p>caibiganpia@gmail.com</p>
-                              </div>
-                          </div>
-                          <div class="info-card p-3">
-                              <i class="bi bi-geo-alt-fill"></i>
-                              <div class="info-content">
-                                  <strong>Location</strong>
-                                  <p>Poblacion 4, Cuenca, Batangas</p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-
-                  <!-- Contact Form (Right) -->
-                  <div class="col-12 col-lg-8">
-                    <div class="form-panel p-4">
-                        <form id="contact" class="contact-form needs-validation d-flex flex-column gap-3">
-                            <div class="row g-3">
-                                <div class="col-12 col-md-6 form-group">
-                                    <span class="form-label">Name</span>
-                                    <input type="text" class="form-control" id="name" required>
-                                </div>
-                                <div class="col-12 col-md-6 form-group">
-                                    <span class="form-label">Email</span>
-                                    <input type="email" class="form-control" id="email" required>
+                <!-- Two-Column Layout -->
+                <div class="row contact-wrapper g-4">
+                    <!-- Contact Info (Left) -->
+                    <div class="col-12 col-lg-4">
+                        <div class="contact-info d-flex flex-column gap-3">
+                            <div class="info-card p-3">
+                                <i class="bi bi-telephone-fill"></i>
+                                <div class="info-content">
+                                    <strong>Phone</strong>
+                                    <p>+63 936 504 4595</p>
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <span class="form-label">Message</span>
-                                <textarea class="form-control" id="message" rows="6" required></textarea>
+                            <div class="info-card p-3">
+                                <i class="bi bi-envelope-fill"></i>
+                                <div class="info-content">
+                                    <strong>Mail</strong>
+                                    <p>caibiganpia@gmail.com</p>
+                                </div>
                             </div>
-                            <div class="btn-container">
-                                <button type="submit" class="btn-send">Send Message</button>
+                            <div class="info-card p-3">
+                                <i class="bi bi-geo-alt-fill"></i>
+                                <div class="info-content">
+                                    <strong>Location</strong>
+                                    <p>Poblacion 4, Cuenca, Batangas</p>
+                                </div>
                             </div>
-                        </form>
+                        </div>
+                    </div>
+
+                    <!-- Contact Form (Right) -->
+                    <div class="col-12 col-lg-8">
+                        <div class="form-panel p-4">
+                            <form id="contactForm" class="contact-form needs-validation d-flex flex-column gap-3">
+                                <div class="row g-3">
+                                    <div class="col-12 col-md-6 form-group">
+                                        <span class="form-label">Name</span>
+                                        <input type="text" class="form-control" id="name" required>
+                                    </div>
+                                    <div class="col-12 col-md-6 form-group">
+                                        <span class="form-label">Email</span>
+                                        <input type="email" class="form-control" id="email" required>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="form-label">Message</span>
+                                    <textarea class="form-control" id="message" rows="6" required></textarea>
+                                </div>
+                                <div class="btn-container">
+                                    <button type="submit" class="btn-send" id="sendButton">Send Message</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
-              </div>
-          </div>
+            </div>
         </section>
 
         <!-- Footer -->
