--- a/article2.html
+++ b/article2.html
@@ -118,9 +118,8 @@
                 display: inline-block;
                 padding: 10px 20px;
                 margin: 20px 0;
-                color: #FFFFFF;
-                background: #BE5985;
-                border-radius: 25px;
+                color: #0A0A0A;
+                background: #FF9999;
                 text-decoration: none;
                 font-weight: 600;
                 transition: box-shadow 0.3s ease;
@@ -215,7 +214,7 @@
                 </div>
 
                 <!-- Back Button (to blog section) -->
-                <a href="index.html#blog" class="back-button">← Back to Blog</a>
+                <a href="index.html#blog" class="back-button rounded-2">← Back to Blog</a>
             </div>
         </section>
         
