--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                                     <textarea class="form-control" id="message" rows="6" required></textarea>
                                 </div>
                                 <div class="btn-container">
-                                    <button type="submit" class="btn-send" id="sendButton">Send Message</button>
+                                    <button type="submit" class="btn-send rounded-2" id="sendButton">Send Message</button>
                                 </div>
                             </form>
                         </div>
