--- a/article2.html
+++ b/article2.html
@@ -17,6 +17,12 @@
             crossorigin="anonymous"
         />
 
+        <!-- Bootstrap Icons CDN -->
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+        />
+
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
     
@@ -214,7 +220,7 @@
                 </div>
 
                 <!-- Back Button (to blog section) -->
-                <a href="index.html#blog" class="back-button rounded-2">← Back to Blog</a>
+                <a href="index.html#blog" class="back-button rounded-2"><i class="bi bi-arrow-left"></i> Back to Blog</a>
             </div>
         </section>
         
